syntax = "proto3";

package rnovatorov.eventsource.accounting;

option go_package = ".;accountingpb";

import "google/protobuf/timestamp.proto";

message Book {
    message Created {
        string description = 1;
    }

    message Closed {
    }

    enum AccountType {
        ACCOUNT_TYPE_UNKNOWN = 0;
        ACCOUNT_TYPE_CAPITAL = 1;
        ACCOUNT_TYPE_ASSET = 2;
        ACCOUNT_TYPE_LIABILITY = 3;
        ACCOUNT_TYPE_INCOME = 4;
        ACCOUNT_TYPE_EXPENSE = 5;
    }

    message AccountAdded {
        string name = 1;
        AccountType type = 2;
    }

    message TransactionEntered {
        google.protobuf.Timestamp timestamp = 1;
        string account_debited = 2;
        string account_credited = 3;
        uint64 amount = 4;
    }
}
